# qa_guru_python_3_22_restapi

./: .env  .gitignore  README.md  config.py  pyproject.toml
framework/: demoqa_with_env.py
tests/: conftest.py  test_demoqa.py
